--- a/Inscrição_evento_Projeto7_23.ipynb
+++ b/Inscrição_evento_Projeto7_23.ipynb
@@ -193,6 +193,23 @@
         }
       ]
     },
-
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**LEMBRETE ADICIONAR LINK VIDEO E ATUALIZAR Nº DE PARTICIPANTES, SUBSTITUIR**\n",
+        "\n",
+        "## Links:\n",
+        "\n",
+        "- [Link para o Ambiente de Teste](https://drive.google.com/drive/folders/1ASGc1wT-94qwvc27JtY-cRQ10sz_FwTp?usp=sharing): Acesse aqui o ambiente de teste do sistema.\n",
+        "\n",
+        "- [Vídeo de Demonstração](#): [link do vídeo]\n",
+        "\n",
+        "- [Repositório no GitHub](https://github.com/Ele-Arcoverde/project7_IBM_python): Repositório no GitHub contendo o código-fonte do projeto.\n",
+        "\n",
+        ],
+      "metadata": {
+        "id": "gy9_nTPqm7NI"
+      }
+    }
   ]
 }
