--- a/Inscrição_evento_Projeto7_23.ipynb
+++ b/Inscrição_evento_Projeto7_23.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1c8ZBPu1IXRXsMYpIjo-CmaOpJKytF3-j",
-      "authorship_tag": "ABX9TyNz+yhVB+wEaFZkQLSuq9SJ",
+      "authorship_tag": "ABX9TyPoHulZZM1drJPcVF/C0CHr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
         "print(\"INSCREVA-SE ABAIXO:\\n\")\n",
         "\n",
         "# Inicialização das variáveis\n",
-        "vagas = 50\n",
+        "vagas = 2\n",
         "participantes = []  # Lista vazia para armazenar os participantes\n",
         "\n",
         "# Loop para preencher as vagas\n",
@@ -93,9 +93,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b090c077-7622-4347-940c-45c821037c27"
+        "cellView": "form",
+        "outputId": "7adb963b-ad9c-4710-a022-5bc6f381c5b1"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +114,7 @@
             "INSCREVA-SE ABAIXO:\n",
             "\n",
             "Vagas : 2\n",
-            "Qual é o seu nome?: Maria\n",
+            "Qual é o seu nome?: maria\n",
             "Qual é sua idade?: 20\n",
             "Você reside no Estado de São Paulo? (sim/não): sim\n",
             "Você confirma disponibilidade para o periodo noturno? (sim/não): sim\n",
@@ -124,32 +125,20 @@
             "\n",
             "Deseja fazer outra inscrição (sim/não): sim\n",
             "Vagas : 1\n",
-            "Qual é o seu nome?: Alfred\n",
-            "Qual é sua idade?: 32\n",
-            "Você reside no Estado de São Paulo? (sim/não): não\n",
+            "Qual é o seu nome?: jose\n",
+            "Qual é sua idade?: 17\n",
+            "Você reside no Estado de São Paulo? (sim/não): sim\n",
             "Você confirma disponibilidade para o periodo noturno? (sim/não): sim\n",
             "\n",
             "Desculpe, não será desta vez:\n",
             "\n",
-            "A participação é restrita aos moradores do Estado de São Paulo.\n",
-            "Acompanhe nossa página, o próximo evento poderá ser no seu Estado.\n",
+            "Você não tem a idade mínima de 18 anos para participar deste encontro.\n",
+            "Aguardamos você num futuro próximo, siga nossas redes.\n",
             "\n",
             "Deseja fazer outra inscrição (sim/não): sim\n",
             "Vagas : 1\n",
-            "Qual é o seu nome?: Jose\n",
-            "Qual é sua idade?: 25\n",
-            "Você reside no Estado de São Paulo? (sim/não): sim\n",
-            "Você confirma disponibilidade para o periodo noturno? (sim/não): não\n",
-            "\n",
-            "Desculpe, não será desta vez:\n",
-            "\n",
-            "O evento ocorre apenas à noite.\n",
-            "Que pena!!!Não desanime, continue visitando nossa página.\n",
-            "\n",
-            "Deseja fazer outra inscrição (sim/não): sim\n",
-            "Vagas : 1\n",
-            "Qual é o seu nome?: Paloma\n",
-            "Qual é sua idade?: 25\n",
+            "Qual é o seu nome?: fabio\n",
+            "Qual é sua idade?: 22\n",
             "Você reside no Estado de São Paulo? (sim/não): sim\n",
             "Você confirma disponibilidade para o periodo noturno? (sim/não): sim\n",
             "\n",
@@ -157,14 +146,16 @@
             "Retire seu convite com antecedência na bilheteria do auditório.\n",
             "Traga comprovante de endereço e um documento de identificação.\n",
             "\n",
-            "Deseja fazer outra inscrição (sim/não): sim\n",
+            "Deseja fazer outra inscrição (sim/não): não\n",
+            "\n",
+            "Até breve, obrigado!\n",
             "\n",
             "Inscrições encerradas.\n",
             "Todas as vagas foram preenchidas.\n",
             "\n",
             "Lista de participantes:\n",
-            "1. Maria, 20 anos\n",
-            "2. Paloma, 25 anos\n"
+            "1. maria, 20 anos\n",
+            "2. fabio, 22 anos\n"
           ]
         }
       ]
@@ -192,6 +183,19 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Link do video:\n",
+        "https://drive.google.com/file/d/1KtN3ZrXJnAQEiOI9AELj4D8q3LyuXdGz/view?usp=sharing\n",
+        "\n",
+        "Link do GitHub:\n",
+        "https://github.com/Ele-Arcoverde/project7_IBM_python/tree/main"
+      ],
+      "metadata": {
+        "id": "FWb4oB4UzcRY"
+      }
     }
   ]
 }
